data/web/css/chart.css
svg {
	z-index: -1;
}
h1 {
  margin: 0 0 5px;
  padding: 0;
}

h2 {
  font-size:20px;
  margin:0 0 5px;
  padding: 0;
}

h3 {
  font-weight: normal;
  margin: 0;
}

table {
  	border-spacing: 0;
}

.bar { 
  float: left;
  width: 25%;
  height:100%;
}

.chord-cell {
  padding:5px 12px;
}

.lyric {
  font-size: .8em;
}

.chord-row, .lyric-row {
  height:50%;
  padding: 3px 0;
}

.chord {
  font-weight: bold;
}

.row {
  clear: both;
  height:100%;
  margin-top: 15px;
  margin-bottom: 15px;
}

hr {
  clear:both;
}

#content {
  width: 700px;
}

.chart-info {
  font-size: 10px;
}

.chart-info dt{
  float:left;
  font-weight:bold;
}

#canvas {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

/*** Articulations ***/

.chord-group {
}
.chord-group table {
  height: 30px;
  padding:5px;
}
.chord-group table {
  border: 1px solid black;
}

.repeat-start .chord-row, .repeat-start .lyric-row{
  padding-left: 20px;
}
.repeat-finish .chord-row, .repeat-finish .lyric-row{
  padding-right: 20px;
}

.repeat-ending, .repeat-ending-cell {
  border-top: 1px solid black;
}

.chord-extensions {
	font-size:small; 
	vertical-align:top;
	padding-left:1px;
}

/* Hacks */
.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
     }
.clearfix { display: inline-block; }
/* start commented backslash hack \*/
* html .clearfix { height: 1%; }
.clearfix { display: block; }
/* close commented backslash hack */

